@@ -177,7 +177,7 @@ Use one of the following targets:
 
 \begin{tabularx}{1.9\textwidth}{lX}
 
-\texttt{ANDROID} & for ARMv6 CPUs \\
+\texttt{ANDROID} & for ARM CPUs (same as \texttt{ANDROID7}) \\
 
 \texttt{ANDROID7} & for ARMv7 CPUs \\
 
