@@ -11,6 +11,8 @@ Version 7.0 - not yet released
   - drop support for Windows CE
   - require Windows Vista or later
   - allow starting multiple XCSoar instances
+* Android
+  - drop support for ARMv6 CPUs
 * Kobo
   - support Kobo Glo HD
 
